tests/base/invalid/Return_CompileFail_6.whiley
import * from whiley.lang.*

int f(bool x, bool y):
    return x && !y

